# CharSlit

./: .gitignore  CLAUDE.md  CMakeLists.txt  EXPERIMENT_CRIRES_BINNED.md  EXPERIMENT_SYNTHETIC_LSF.md  LATER.md  OSAMP_EXPERIMENTS.md  OSAMP_SPEC.md  PYTHON_IMPLEMENTATION.md  README.md  __init__.py  analyse_wide_bisector.py  analyze_curvedelta.py  bench.py  bisect.md  compare_slitdelta_methods.py  compare_speed.py  cr2res_to_curvedelta.py  example_use_curvedelta.py  experiment_synthetic_lsf.py  extract_python.py  hatch_build.py  make_curvedelta.py  make_slitdeltas.py  make_slitdeltas_xcorr.py  make_testdata.py  osamp_status.md  plan.md  plot_curvedelta.py  plotting.py  pyproject.toml  show_stats.py  slitcurve_plotting.py  speed.md  test_extract_python.py
charslit/: __init__.py  extract.c  extract_wrapper.cpp
data/: CRIRES1.fits  CRIRES2.fits  Rsim.fits  discontinuous.fits  fixedslope.fits  multislope.fits  test_data_Hsim.fits  ycen_CRIRES1.fits  ycen_CRIRES1.npz
docs/: ycen_fractional_offset_proposal.md
scripts/: analyse_wide_bisector.py  analyze_curvedelta.py  compare_curve_fits.py  compare_osamp.py  cutnshift.py  experiment_binx2_crires.py  experiment_synthetic_lsf.py  make_curvedelta.py  make_swath.py  plotting.py  show_slit_plot.py
slitdec/: interface.md  slitdec.c  slitdec.h  slitdec_wrapper.cpp
tests/: conftest.py  test_extract.py  test_osamp_spec.py  test_regression.py  test_slitdec.py
tests/golden/: osamp_spec1.npz
